TeleService: Add a controller for in-call proximity sensor (3/3)
* Add the setting for enable proximity sensor or not when calling

Change-Id: I42bc05ae1c22443cca782ac1ae66d5d5bb4ac858
Signed-off-by: Janson Kang <temasek71@gmail.com>
Signed-off-by: Varun <date.varun123@gmail.com>

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -17,5 +17,10 @@
     <string name="summary_do_nothing">do nothing</string>
     <string name="summary_mute_ringer">mute the ringer</string>
     <string name="summary_dismiss_call">dismiss the call</string>
+    
+    <!-- Proximity sensor enable -->
+    <string name="proximity_mode_title">Enable proximity sensor</string>
+    <string name="proximity_on_summary">When in call, use proximity sensor to turn off screen</string>
+    <string name="proximity_off_summary">When in call, the screen will remain on</string>
 
 </resources>
