--- a/res/xml/call_feature_setting.xml
+++ b/res/xml/call_feature_setting.xml
@@ -70,14 +70,6 @@
         android:summary="@string/sum_cdma_call_settings"
         android:persistent="false" />
 
-    <ListPreference
-        android:key="flip_action"
-        android:title="@string/flip_action_title"
-        android:dialogTitle="@string/flip_action_dialog_title"
-        android:entries="@array/flip_action_setting_entries"
-        android:entryValues="@array/flip_action_setting_values"
-        android:persistent="false" />
-
     <PreferenceScreen
         android:key="ims_settings_key"
         android:title="@string/ims_settings"
@@ -88,12 +80,27 @@
             android:targetClass="com.qualcomm.qti.ims.ImsSettings"/>
     </PreferenceScreen>
 
-     <PreferenceScreen
-         android:key="button_blacklist"
-         android:title="@string/blacklist_title"
-         android:persistent="false">
-         <intent android:action="android.intent.action.MAIN"
-             android:targetPackage="com.android.settings"
-             android:targetClass="com.android.settings.Settings$BlacklistSettingsActivity" />
-     </PreferenceScreen>
+    <PreferenceScreen
+        android:key="button_blacklist"
+        android:title="@string/blacklist_title"
+        android:persistent="false">
+        <intent android:action="android.intent.action.MAIN"
+            android:targetPackage="com.android.settings"
+            android:targetClass="com.android.settings.Settings$BlacklistSettingsActivity" />
+    </PreferenceScreen>
+
+    <SwitchPreference
+        android:key="button_proximity_key"
+        android:title="@string/proximity_mode_title"
+        android:persistent="false"
+        android:summary="@string/proximity_on_summary" />
+
+    <ListPreference
+        android:key="flip_action"
+        android:title="@string/flip_action_title"
+        android:dialogTitle="@string/flip_action_dialog_title"
+        android:entries="@array/flip_action_setting_entries"
+        android:entryValues="@array/flip_action_setting_values"
+        android:persistent="false" />
+
 </PreferenceScreen>
